# learn_opengl

./: .gitignore  CMakeLists.txt  README.md  mappings.imp
include/glad/: glad.h
lib/: glad.c
res/: basicFragment.glsl  basicVertex.glsl  globalFrag.glsl  globalVertex.glsl
src/: camera.cpp  camera.hpp  context.cpp  context.hpp  keyboard.cpp  keyboard.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  shader.cpp  shader.hpp  shaders.cpp  shaders.hpp  texture.cpp  texture.hpp
src/ecs/: component.cpp  component.hpp  entity.cpp  entity.hpp  scene.cpp  scene.hpp  types.hpp
src/ecs/components/: camera.cpp  camera.hpp  light.cpp  light.hpp  transform.hpp
src/graphics/: mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/input/: camera.cpp  camera.hpp  cursor.cpp  cursor.hpp  input.cpp  input.hpp  keyboard.cpp  keyboard.hpp
src/util/: cache.hpp
